--- a/modules-available/sysconfig/templates/branding-start.html
+++ b/modules-available/sysconfig/templates/branding-start.html
@@ -8,9 +8,8 @@
 		<label for="input-url">{{lang_urlLoad}}</label>
 		<input class="form-control" type="text" name="url" id="input-url">
 	</div>
-	{{lang_or}}
 	<div class="form-group">
-		<label for="input-file">{{lang_computerLoad}}</label>
+		<label for="input-file">{{lang_or}} {{lang_computerLoad}}</label>
 			<div class="input-group upload-ex">
 				<input type="text" class="form-control" readonly placeholder="{{lang_selectFile}}">
 				<span class="input-group-btn">
