--- a/modules-available/baseconfig/templates/_page.html
+++ b/modules-available/baseconfig/templates/_page.html
@@ -50,9 +50,12 @@
 				<div class="modal fade" id="help-{{setting}}" tabindex="-1" role="dialog">
 					<div class="modal-dialog">
 						<div class="modal-content">
-							<div class="modal-header">{{setting}}</div>
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal">&times;</button>
+								<h4 class="modal-title"><b>{{setting}}</b></h4>
+
+							</div>
 							<div class="modal-body">{{{description}}}</div>
-							<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 						</div>
 					</div>
 				</div>
@@ -61,14 +64,18 @@
 		</div>
 	</div>
 	{{/categories}}
-	<button class="btn btn-primary" type="submit">{{lang_save}}</button>
-	<button class="btn btn-default" type="reset">{{lang_reset}}</button>
-	{{^override}}
-	<a class="btn btn-default" href="api.php?do=baseconfig&amp;user={{userid}}">Download</a>
-	{{/override}}
-	{{#override}}
-	<a class="btn btn-default" href="api.php?do=baseconfig&amp;user={{userid}}&amp;module={{target_module}}&amp;value={{field_value}}&amp;force=1">Download</a>
-	{{/override}}
+	<div class="text-right">
+		<button class="btn btn-warning" type="reset"><span class="glyphicon glyphicon-refresh"></span> {{lang_reset}}</button>
+		{{^override}}
+		<a class="btn btn-default" href="api.php?do=baseconfig&amp;user={{userid}}"><span class="glyphicon glyphicon-download-alt"></span> Download</a>
+		{{/override}}
+		{{#override}}
+		<a class="btn btn-default" href="api.php?do=baseconfig&amp;user={{userid}}&amp;module={{target_module}}&amp;value={{field_value}}&amp;force=1">Download</a>
+		{{/override}}
+		<button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
+	</div>
+	<br/>
+
 </form>
 
 <script type="text/javascript">
