--- a/modules-available/sysconfig/templates/ad-start.html
+++ b/modules-available/sysconfig/templates/ad-start.html
@@ -1,8 +1,10 @@
 <p>
 	{{lang_adText1}}
 	<br>
+	<br/>
 	{{lang_adText2}}
 	<br>
+	<br/>
 	{{lang_adText3}}
 </p>
 <pre>dsquery user -name &quot;Username&quot;</pre>
@@ -18,35 +20,35 @@
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="edit" value="{{edit}}">
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">{{lang_moduleTitle}}</span>
+		<span style="min-width:150px;" class="input-group-addon slx-ga">{{lang_moduleTitle}}</span>
 		<input tabindex="1" name="title" value="{{title}}" type="text" class="form-control" autofocus>
 	</div>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">Server *</span>
+		<span style="min-width:150px;" class="input-group-addon slx-ga">Server *</span>
 		<input tabindex="2" name="server" value="{{server}}" type="text" class="form-control" placeholder="dc0.institution.example.com">
 	</div>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">{{lang_bindDN}} *</span>
+		<span style="min-width:150px;" class="input-group-addon slx-ga">{{lang_bindDN}} *</span>
 		<input tabindex="3" name="binddn" value="{{binddn}}" type="text" class="form-control" placeholder="domain\bwlp *ODER* CN=bwlp,OU=Benutzer,DC=domain,DC=hs-beispiel,DC=de">
 	</div>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">{{lang_password}} *</span>
+		<span style="min-width:150px;" class="input-group-addon slx-ga">{{lang_password}} *</span>
 		<input tabindex="4" name="bindpw" value="{{bindpw}}" type="{{password_type}}" class="form-control" placeholder="{{lang_password}}">
 	</div>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">{{lang_searchBase}}</span>
+		<span style="min-width:150px;" class="input-group-addon slx-ga">{{lang_searchBase}}</span>
 		<input tabindex="5" name="searchbase" value="{{searchbase}}" type="text" class="form-control" placeholder="dc=windows,dc=hs-beispiel,dc=de">
 	</div>
 	<br>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">Home</span>
+		<span style="min-width:150px;" class="input-group-addon slx-ga">Home</span>
 		<input tabindex="6" name="home" value="{{home}}" type="text" class="form-control" placeholder="\\server.example.com\%s">
 		<span class="input-group-btn">
 			<a class="btn btn-default" data-toggle="modal" data-target="#help-home"><span class="glyphicon glyphicon-question-sign"></span></a>
 		</span>
 	</div>
 	<div class="input-group">
-		<span class="input-group-addon slx-ga">{{lang_homeAttr}}</span>
+		<span style="min-width:150px;" class="input-group-addon slx-ga">{{lang_homeAttr}}</span>
 		<input tabindex="6" name="homeattr" value="{{homeattr}}" type="text" class="form-control" placeholder="homeDirectory">
 		<span class="input-group-btn">
 			<a class="btn btn-default" data-toggle="modal" data-target="#help-homeattr"><span class="glyphicon glyphicon-question-sign"></span></a>
@@ -54,23 +56,26 @@
 	</div>
 	<br>
 	<div>
-		<label>
-			<input type="checkbox" name="fixnumeric" {{#fixnumeric}}checked{{/fixnumeric}}> {{lang_fixNumeric}}
-		</label>
+		<div class="checkbox">
+			<input type="checkbox" name="fixnumeric" {{#fixnumeric}}checked{{/fixnumeric}}>
+			<label><b>{{lang_fixNumeric}}</b></label>
+		</div>
 		<div>
 			<i>{{lang_fixNumericDescription}}</i>
 		</div>
 	</div>
 	<br>
 	<div>
-		<label>
-			<input type="checkbox" name="ssl" onchange="$('#cert-box').css('display', this.checked ? '' : 'none')" {{#ssl}}checked{{/ssl}}> {{lang_ssl}}
-		</label>
+		<div class="checkbox">
+			<input type="checkbox" name="ssl" onchange="$('#cert-box').css('display', this.checked ? '' : 'none')" {{#ssl}}checked{{/ssl}}>
+			<label><b>{{lang_ssl}}</b></label>
+		</div>
 		<div>
 			<i>{{lang_sslDescription}}</i>
 		</div>
 	</div>
 	<br/>
+
 	<hr>
 	<div class="btn-group">
 		<a class="btn btn-default" href="?do=SysConfig&action=addmodule">{{lang_back}}</a>
@@ -78,7 +83,9 @@
 	<div class="btn-group pull-right">
 		<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
 	</div>
+
 	<div class="clearfix"></div>
+	<hr>
 	<div {{^ssl}}style="display:none"{{/ssl}} id="cert-box">
 		<div class="well well-sm" id="wcustom">
 			{{lang_customCertificate}}
