--- a/modules-available/sysconfig/templates/list-modules.html
+++ b/modules-available/sysconfig/templates/list-modules.html
@@ -39,7 +39,7 @@
 				{{/modules}}
 			</form>
 		</div>
-		<div class="panel-footer">
+		<div class="panel-footer text-right">
 			<a class="btn btn-primary" href="?do=SysConfig&amp;action=addmodule">{{lang_newModule}}</a>
 		</div>
 	</div>
@@ -47,11 +47,13 @@
 	<div class="modal fade" id="help-module" tabindex="-1" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<div class="modal-header">{{lang_moduleConfiguration}}</div>
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title"><b>{{lang_moduleConfiguration}}</b></h4>
+				</div>
 				<div class="modal-body">
 					{{lang_helpModuleConfiguration}}
 				</div>
-				<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 			</div>
 		</div>
 	</div>
