--- a/modules-available/sysconfig/templates/start.html
+++ b/modules-available/sysconfig/templates/start.html
@@ -10,6 +10,6 @@
 	</div>
 </div>
 {{/modules}}
-<div class="btn-group">
+<div class="text-right">
 	<a class="btn btn-default" href="?do=SysConfig">{{lang_cancel}}</a>
 </div>
