--- a/modules-available/serversetup-bwlp/templates/ipxe.html
+++ b/modules-available/serversetup-bwlp/templates/ipxe.html
@@ -15,9 +15,9 @@
 
 			<div class="form-group">
 				<strong>{{lang_bootBehavior}}</strong>
-				<div><label class="radio-inline"><input type="radio" name="defaultentry" value="net" {{active-net}}> bwLehrpool</label></div>
-				<div><label class="radio-inline"><input type="radio" name="defaultentry" value="hdd" {{active-hdd}}> {{lang_localHDD}}</label></div>
-				<div><label class="radio-inline"><input type="radio" name="defaultentry" value="custom" {{active-custom}}> {{lang_customEntry}} (&quot;custom&quot;)</label></div>
+				<div class="radio"><input type="radio" name="defaultentry" value="net" {{active-net}}><label>bwLehrpool</label></div>
+				<div class="radio"><input type="radio" name="defaultentry" value="hdd" {{active-hdd}}><label>{{lang_localHDD}}</label></div>
+				<div class="radio"><input type="radio" name="defaultentry" value="custom" {{active-custom}}><label>{{lang_customEntry}} (&quot;custom&quot;)</label></div>
 			</div>
 
 			<div class="form-group">
@@ -43,7 +43,8 @@
 		</div>
 
 		<div class="panel-footer">
-			<div class="pull-right">
+			<button class="btn btn-primary pull-right" name="action" value="ipxe">{{lang_bootMenuCreate}}</button>
+			<div>
 				<div class="btn-group" role="group">
 					<a class="btn btn-default" href="?do=ServerSetup&amp;action=getimage">
 						<span class="glyphicon glyphicon-download-alt"></span>
@@ -52,7 +53,6 @@
 					<span class="btn btn-default" data-toggle="modal" data-target="#help-usbimg"><span class="glyphicon glyphicon-question-sign"></span></span>
 				</div>
 			</div>
-			<button class="btn btn-primary" name="action" value="ipxe">{{lang_bootMenuCreate}}</button>
 		</div>
 	</div>
 </form>
@@ -60,7 +60,10 @@
 <div class="modal fade" id="help-custom" tabindex="-1" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<div class="modal-header">{{lang_menuCustom}}</div>
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				{{lang_menuCustom}}
+			</div>
 			<div class="modal-body">
 				{{lang_menuCustomHint1}}
 				<br>{{lang_example}}:
@@ -73,7 +76,6 @@
 				{{lang_menuCustomHint2}} LABEL <strong>custom</strong>
 				{{lang_menuCustomHint3}}
 			</div>
-			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 		</div>
 	</div>
 </div>
@@ -81,7 +83,10 @@
 <div class="modal fade" id="help-usbimg" tabindex="-1" role="dialog">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<div class="modal-header">{{lang_usbImage}}</div>
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				{{lang_usbImage}}
+			</div>
 			<div class="modal-body">
 				<p>{{lang_usbImgHelp}}</p>
 				<p>
@@ -98,7 +103,6 @@
 					<a href="https://rufus.akeo.ie/#download">{{lang_downloadRufus}}</a>
 				</p>
 			</div>
-			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 		</div>
 	</div>
 </div>
