--- a/modules-available/systemstatus/templates/_page.html
+++ b/modules-available/systemstatus/templates/_page.html
@@ -97,7 +97,7 @@
 										</div>
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
-											<button type="submit" class="btn btn-sm btn-warning" name="deletelocation" value="{{locationid}}"><span class="glyphicon glyphicon-repeat"></span> {{lang_serverReboot}}</button>
+											<button type="submit" class="btn btn-sm btn-warning"><span class="glyphicon glyphicon-repeat"></span> {{lang_serverReboot}}</button>
 										</div>
 									</div>
 								</div>
