--- a/modules-available/statistics/templates/machine-notes.html
+++ b/modules-available/statistics/templates/machine-notes.html
@@ -9,7 +9,8 @@
 					<input type="hidden" name="action" value="setnotes">
 					<input type="hidden" name="uuid" value="{{machineuuid}}">
 					<textarea name="content" class="form-control" cols="101" rows="10">{{notes}}</textarea>
-					<button type="submit" class="btn btn-primary">{{lang_save}}</button>
+					<br/>
+					<button type="submit" class="btn btn-primary pull-right"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
 				</form>
 			</div>
 		</div>
