--- a/modules-available/statistics/templates/cpumodels.html
+++ b/modules-available/statistics/templates/cpumodels.html
@@ -6,34 +6,38 @@
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-md-8">
-					<table class="table table-condensed table-striped table-responsive">
-						<tr>
-							<th>{{lang_modelName}}</th>
-							<th class="text-right text-nowrap">{{lang_cpuCores}}</th>
-							<th class="text-right text-nowrap">{{lang_modelCount}}</th>
-						</tr>
-						{{#rows}}
-						<tr id="{{id}}" class="{{collapse}}">
-							<td class="text-left text-nowrap filter-col" data-filter-col="systemmodel">
-								<table style="width:100%; table-layout: fixed;"><tr><td style="overflow:hidden;text-overflow: ellipsis;">
-								<a class="filter-val" data-filter-val="{{systemmodel}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~systemmodel={{urlsystemmodel}}">{{systemmodel}}</a>
-								</td></tr></table>
-							</td>
-							<td class="text-right filter-col" data-filter-col="realcores">
-								<a class="filter-val" data-filter-val="{{cores}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~realcores={{cores}}">{{cores}}</a>
-							</td>
-							<td class="text-right">{{count}}</td>
-						</tr>
-						{{/rows}}
-						<tr class="slx-decollapse">
-							<td colspan="3">
-								<span class="btn-group btn-group-justified">
-									<span class="btn btn-default btn-sm">
-										<span class="glyphicon glyphicon-menu-down"></span>
+					<table class="stupidtable table table-condensed table-striped table-responsive">
+						<thead>
+							<tr>
+								<th data-sort="string">{{lang_modelName}}</th>
+								<th data-sort="int" class="text-right text-nowrap">{{lang_cpuCores}}</th>
+								<th data-sort="int" class="text-right text-nowrap">{{lang_modelCount}}</th>
+							</tr>
+						</thead>
+						<tbody>
+							{{#rows}}
+							<tr id="{{id}}" class="{{collapse}}">
+								<td data-sort-value="{{systemmodel}}" class="text-left text-nowrap filter-col" data-filter-col="systemmodel">
+									<table style="width:100%; table-layout: fixed;"><tr><td style="overflow:hidden;text-overflow: ellipsis;">
+									<a class="filter-val" data-filter-val="{{systemmodel}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~systemmodel={{urlsystemmodel}}">{{systemmodel}}</a>
+									</td></tr></table>
+								</td>
+								<td data-sort-value="{{cores}}" class="text-right filter-col" data-filter-col="realcores">
+									<a class="filter-val" data-filter-val="{{cores}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~realcores={{cores}}">{{cores}}</a>
+								</td>
+								<td class="text-right">{{count}}</td>
+							</tr>
+							{{/rows}}
+							<tr class="slx-decollapse">
+								<td colspan="3">
+									<span class="btn-group btn-group-justified">
+										<span class="btn btn-default btn-sm">
+											<span class="glyphicon glyphicon-menu-down"></span>
+										</span>
 									</span>
-								</span>
-							</td>
-						</tr>
+								</td>
+							</tr>
+						</tbody>
 					</table>
 				</div>
 				<div class="col-md-4">
