--- a/modules-available/statistics/templates/memory.html
+++ b/modules-available/statistics/templates/memory.html
@@ -6,28 +6,32 @@
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-sm-6">
-					<table class="filter-col table table-condensed table-striped" data-filter-col="gbram">
-						<tr>
-							<th>{{lang_ramSize}}</th>
-							<th class="text-right">{{lang_machineCount}}</th>
-						</tr>
-						{{#rows}}
-						<tr id="ramid{{gb}}" class="{{class}} {{collapse}}">
-							<td class="text-left text-nowrap">
-								<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~gbram={{gb}}">{{gb}}&thinsp;GiB</a>
-							</td>
-							<td class="text-right">{{count}}</td>
-						</tr>
-						{{/rows}}
-						<tr class="slx-decollapse">
-							<td colspan="2">
-								<span class="btn-group btn-group-justified">
-									<span class="btn btn-default btn-sm">
-										<span class="glyphicon glyphicon-menu-down"></span>
+					<table class="stupidtable filter-col table table-condensed table-striped" data-filter-col="gbram">
+						<thead>
+							<tr>
+								<th data-sort="int">{{lang_ramSize}}</th>
+								<th data-sort="int" class="text-right">{{lang_machineCount}}</th>
+							</tr>
+						</thead>
+						<tbody>
+							{{#rows}}
+							<tr id="ramid{{gb}}" class="{{class}} {{collapse}}">
+								<td class="text-left text-nowrap" data-sort-value="{{gb}}">
+									<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~gbram={{gb}}">{{gb}}&thinsp;GiB</a>
+								</td>
+								<td class="text-right">{{count}}</td>
+							</tr>
+							{{/rows}}
+							<tr class="slx-decollapse">
+								<td colspan="2">
+									<span class="btn-group btn-group-justified">
+										<span class="btn btn-default btn-sm">
+											<span class="glyphicon glyphicon-menu-down"></span>
+										</span>
 									</span>
-								</span>
-							</td>
-						</tr>
+								</td>
+							</tr>
+						</tbody>
 					</table>
 				</div>
 				<div class="col-sm-6">
