[baseconfig][baseconfig_partitions_cdn][eventlog][minilinux][permissionmanager][rebootcontrol][statisics_reporting][syslog] fixed inconsistencies

--- a/modules-available/baseconfig/templates/_page.html
+++ b/modules-available/baseconfig/templates/_page.html
@@ -65,7 +65,7 @@
 	</div>
 	{{/categories}}
 	<div class="text-right">
-		<button class="btn btn-warning" type="reset"><span class="glyphicon glyphicon-refresh"></span> {{lang_reset}}</button>
+		<button class="btn btn-warning" type="reset"><span class="glyphicon glyphicon-refresh"></span> {{lang_discardChanges}}</button>
 		{{^override}}
 		<a class="btn btn-default" href="api.php?do=baseconfig&amp;user={{userid}}"><span class="glyphicon glyphicon-download-alt"></span> Download</a>
 		{{/override}}
