--- a/modules-available/rebootcontrol/templates/_page.html
+++ b/modules-available/rebootcontrol/templates/_page.html
@@ -1,3 +1,8 @@
+<div class="page-header">
+	<h1>{{lang_rebootControl}}</h1>
+</div>
+
+
 <form id="tableDataForm" method="post" action="?do=rebootcontrol" class="form-inline">
 	<input type="hidden" name="token" value="{{token}}">
 	<div class="row">
