--- a/modules-available/baseconfig_partitions_cdn/templates/_page.html
+++ b/modules-available/baseconfig_partitions_cdn/templates/_page.html
@@ -23,7 +23,6 @@
 				<div class='col-sm-1 col-md-2'>
 					<a class='btn btn-danger' href='?do=BaseConfig_Partitions_CDN&amp;deletePartition={{id}}&amp;token={{token}}'>
 						<span class='glyphicon glyphicon-trash'></span>
-						<span class="hidden-sm">{{lang_delete}}</span>
 					</a>
 				</div>
 			</div>
@@ -31,24 +30,52 @@
 		{{/partitions}}
 		<div class='list-group-item clearfix'>
 			<div class="pull-right">
-				<a class='btn btn-default ' data-toggle='modal' data-target='#add-partition'>
+				<a class='btn btn-success ' data-toggle='modal' data-target='#add-partition'>
 					<span class='glyphicon glyphicon-plus'></span> {{lang_newPartition}}
 				</a>
 			</div>
 		</div>
 	</div>
-	<button class="btn btn-lg btn-primary" type="submit">{{lang_save}}</button>
-	<button class="btn btn-lg btn-primary" type="reset">{{lang_reset}}</button>
-	<a class="btn btn-lg btn-primary" href="#" onclick="saveConfig()">Download</a>
+	<div class="pull-right">
+		<a class="btn btn-default" data-toggle="modal" data-target="#downloadModal"><span class="glyphicon glyphicon-download-alt"></span> Download</a>
+		<button class="btn btn-warning" type="reset"><span class="glyphicon glyphicon-refresh"></span> {{lang_discardChanges}}</button>
+		<button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
+	</div>
+
+	<div class ="modal fade" id="downloadModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" style="width: 400px" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					{{lang_confirm}}
+				</div>
+				<div class="modal-footer">
+					<button type="button" onclick="saveConfig(false)" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
+					<button type="button" onclick="saveConfig(true)" class="btn btn-sm btn-danger" name="download"> Download</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </form>
 
-<div>
-	<form method="post" action="?do=BaseConfig_Partitions_CDN">
-		<input type="hidden" name="token" value="{{token}}">
-		<input type="hidden" name="action" value="reset">
-		<button class="btn btn-default" type="submit" onclick="return confirm('{{lang_resetConfirm}}');">{{lang_resetDefault}}</button>
-	</form>
-</div>
+<form method="post" action="?do=BaseConfig_Partitions_CDN">
+	<input type="hidden" name="token" value="{{token}}">
+	<input type="hidden" name="action" value="reset">
+	<button class="btn btn-danger" type="button" data-toggle="modal" data-target="#resetDefaultModal">{{lang_resetDefault}}</button>
+
+	<div class ="modal fade" id="resetDefaultModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" style="width: 400px" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					{{lang_areYouSureNoUndo}}
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
+					<button type="submit" class="btn btn-sm btn-danger" name="resetDefault"> {{lang_resetDefault}}</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</form>
 
 <!-- Create Partition Window -->
 <form action="?do=BaseConfig_Partitions_CDN" method="post">
@@ -56,32 +83,37 @@
 		<div class="modal-dialog">
 
 			<div class="modal-content">
-				<div class="modal-header">{{lang_newPartition}}</div>
-				<div class="modal-body">
+				<div class="modal-header">
+					<h4><b>{{lang_newPartition}}</b></h4>
+				</div>
 
+				<div class="modal-body">
 					<div class="input-group">
-						<span class="input-group-addon">{{lang_partitionId}}</span>
+						<span class="input-group-addon" style="min-width:140px;">{{lang_partitionId}}</span>
 						<input name="new-partition-id" class="form-control" type="text">
 					</div>
 					<p class="help-block">{{lang_helpId}}</p>
 					<div class="input-group">
-						<span class="input-group-addon">{{lang_partitionSize}}</span>
+						<span class="input-group-addon" style="min-width:140px;">{{lang_partitionSize}}</span>
 						<input name="new-partition-size" class="form-control" type="text">
 					</div>
 					<p class="help-block">{{lang_helpSize}}</p>
 					<div class="input-group">
-						<span class="input-group-addon">{{lang_partitionMountPoint}}</span>
+						<span class="input-group-addon" style="min-width:140px;">{{lang_partitionMountPoint}}</span>
 						<input name="new-partition-mount-point" class="form-control" type="text">
 					</div>
 					<p class="help-block">{{lang_helpMountPoint}}</p>
 					<div class="input-group">
-						<span class="input-group-addon">{{lang_partitionOptions}}</span>
+						<span class="input-group-addon" style="min-width:140px;">{{lang_partitionOptions}}</span>
 						<input name="new-partition-options" class="form-control" type="text">
 					</div>
 					<p class="help-block">{{lang_helpOptions}}</p>
+				</div>
+
+				<div class="modal-footer">
+					<a class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</a>
 					<input type="submit" class="btn btn-primary" value="{{lang_create}}">
 				</div>
-				<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 			</div>
 		</div>
 	</div>
@@ -89,8 +121,8 @@
 	<input type="hidden" name="token" value="{{token}}">
 </form>
 <script type="text/javascript">
-	function saveConfig(){
-		if(confirm('{{lang_confirm}}'))
+	function saveConfig(download){
+		if(download)
 			window.location = 'api.php?do=baseconfig&user={{user}}&save=true';
 		else
 			window.location = 'api.php?do=baseconfig&user={{user}}';
