--- a/modules-available/eventlog/templates/_page.html
+++ b/modules-available/eventlog/templates/_page.html
@@ -3,18 +3,18 @@
 <table class="table table-striped table-condensed">
 	<thead>
 		<th width="1"></th>
-		<th>{{lang_when}}</th>
-		<th>{{lang_event}}</th>
+		<th class="text-center">{{lang_when}}</th>
+		<th class="text-center">{{lang_event}}</th>
 		<th width="1">{{lang_details}}</th>
 	</thead>
 	<tbody>
 	{{#list}}
 		<tr>
 			<td><span class="glyphicon glyphicon-{{icon}}" title="{{logtypeid}}"></span></td>
-			<td class="text-right" nowrap="nowrap">{{date}}</td>
+			<td class="text-center" nowrap="nowrap">{{date}}</td>
 			<td class="{{color}}">{{description}}</td>
-			<td>{{#extra}}
-				<a class="btn btn-default btn-xs pull-left" onclick="$('#details-body').html($('#extra-{{logid}}').html())" data-toggle="modal" data-target="#myModal">&raquo;</a>
+			<td class="text-center">{{#extra}}
+				<a class="btn btn-default btn-xs" onclick="$('#details-body').html($('#extra-{{logid}}').html())" data-toggle="modal" data-target="#myModal">&raquo;</a>
 				<div class="hidden" id="extra-{{logid}}">{{extra}}</div>
 			{{/extra}}</td>
 		</tr>
@@ -32,9 +32,6 @@
       </div>
       <div class="modal-body">
 			<pre id="details-body"></pre>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
