--- a/modules-available/permissionmanager/templates/roleeditor.html
+++ b/modules-available/permissionmanager/templates/roleeditor.html
@@ -1,16 +1,17 @@
+<h1>{{lang_roleEditor}}</h1>
 <form method="post" action="?do=permissionmanager">
 	<input type="hidden" name="action" value="saveRole">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="roleid" value="{{roleid}}">
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-12" style="margin-bottom: 20px;">
 			<b>{{lang_Name}}:</b>
 			<input name="roleName" value="{{roleName}}" type="text" id="roleName" class="form-control">
-			<button type="button" id="cancelButton" class="btn btn-default pull-right"><span class="glyphicon glyphicon-remove"></span> {{lang_Cancel}}</button>
 			<button type="submit" id="saveButton" class="btn btn-primary pull-right"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_Save}}</button>
+			<button type="button" id="cancelButton" class="btn btn-default pull-right">{{lang_Cancel}}</button>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row" style="margin-bottom: 20px;">
 		<div class="col-md-3">
 			<b style="line-height: 34px">{{lang_Locations}}:</b>
 			<div class="pull-right"><input name="allLocations" {{allLocChecked}} type="checkbox" id="allLocations"></div>
