--- a/modules-available/statistics_reporting/templates/columnChooser.html
+++ b/modules-available/statistics_reporting/templates/columnChooser.html
@@ -1,64 +1,78 @@
 <form method="get" id="controlsForm">
 	<input type="hidden" name="do" value="statistics_reporting">
-	<div class="row">
-		<div class="col-md-12">
-			<button id="button-settings" type="button" class="pull-right btn btn-{{settingsButtonClass}}" data-toggle="modal" data-target="#modal-settings"><span class="glyphicon glyphicon-cog"></span></button>
-			<strong class="text-capitalize">{{lang_displaySelection}}</strong>
-		</div>
-	</div>
-	<div class="row top-row">
-		<div class="col-md-4">
-			<select name="type" id="select-table" class="form-control">
-				{{#tables}}
-				<option value="{{value}}" {{selected}}>{{name}}</option>
-				{{/tables}}
-			</select>
-		</div>
-		<div class="col-md-4">
-			<select name="cutoff" id="select-cutoff" class="form-control">
-				{{#days}}
-				<option value="{{days}}" {{selected}}>{{days}} {{lang_days}}</option>
-				{{/days}}
-			</select>
-		</div>
-		<div class="col-md-3">
-			<div id="slider">
-				<div id="lower-handle" class="ui-slider-handle"></div>
-				<div id="upper-handle" class="ui-slider-handle"></div>
-				<input type="hidden" id="lower-field" name="lower" value="{{lower}}">
-				<input type="hidden" id="upper-field" name="upper" value="{{upper}}">
-			</div>
-		</div>
-	</div>
-	<div class="row top-row">
-		<div class="col-md-12 form-inline">
-			<div><strong class="text-capitalize">{{lang_displayColumns}}</strong></div>
-			{{#columns}}
-				<div class="checkbox">
-					<input id="id_{{id}}" name="{{id}}" value="on" type="checkbox" class="column-toggle form-control" {{checked}}>
-					<label for="id_{{id}}">{{name}}</label>
-				</div>
-			{{/columns}}
-		</div>
-	</div>
-	<div class="row top-row">
-		<div class="col-md-12 form-inline">
-			<div class="pull-right input-group">
+
+	<div class="page-header">
+		<div class="form-inline pull-right">
+			<div class="input-group">
 				<select class="form-control" name="format">
 					<option value="json">JSON</option>
 					<option value="csv">CSV (Excel)</option>
 					<option value="xml">XML</option>
 				</select>
 				<div class="input-group-btn">
-				<button type="submit" class="btn btn-default" name="action" value="export">{{lang_export}}</button>
+					<button type="submit" class="btn btn-default" name="action" value="export">{{lang_export}}</button>
 				</div>
 			</div>
-			<button type="submit" class="btn btn-primary">{{lang_apply}}</button>
+			<button id="button-settings" type="button" class="btn btn-{{settingsButtonClass}}" data-toggle="modal" data-target="#modal-settings"><span class="glyphicon glyphicon-cog"></span> Settings</button>
+		</div>
+		<h1>{{lang_moduleName}}</h1>
+	</div>
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<strong class="text-capitalize">{{lang_displaySelection}}</strong>
+		</div>
+		<div class="panel-body">
+			<div class="row top-row">
+				<div class="col-md-4">
+					<select name="type" id="select-table" class="form-control">
+						{{#tables}}
+						<option value="{{value}}" {{selected}}>{{name}}</option>
+						{{/tables}}
+					</select>
+				</div>
+				<div class="col-md-3">
+					<select name="cutoff" id="select-cutoff" class="form-control">
+						{{#days}}
+						<option value="{{days}}" {{selected}}>{{days}} {{lang_days}}</option>
+						{{/days}}
+					</select>
+				</div>
+				<div class="col-md-3" style="margin-top: 10px;">
+					<div id="slider">
+						<div id="lower-handle" class="ui-slider-handle"></div>
+						<div id="upper-handle" class="ui-slider-handle"></div>
+						<input type="hidden" id="lower-field" name="lower" value="{{lower}}">
+						<input type="hidden" id="upper-field" name="upper" value="{{upper}}">
+					</div>
+				</div>
+				<div class="col-md-1">
+					<button type="submit" class="btn btn-primary">{{lang_apply}}</button>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<strong class="text-capitalize">{{lang_displayColumns}}</strong>
+		</div>
+		<div class="panel-body">
+			<div class="row top-row">
+				<div class="col-md-12 form-inline">
+					{{#columns}}
+					<div class="checkbox">
+						<input id="id_{{id}}" name="{{id}}" value="on" type="checkbox" class="column-toggle form-control" {{checked}}>
+						<label for="id_{{id}}">{{name}}</label>
+					</div>
+					{{/columns}}
+				</div>
+			</div>
 		</div>
 	</div>
 </form>
 
-<hr>
 
 <div id="modal-settings" class="modal fade" role="dialog">
 	<div class="modal-dialog">
@@ -81,6 +95,7 @@
 				</div>
 			</div>
 			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
 				<button type="button" class="btn btn-primary" data-dismiss="modal" onclick="saveSettings()">{{lang_save}}</button>
 			</div>
 		</div>
