--- a/modules-available/syslog/templates/page-syslog.html
+++ b/modules-available/syslog/templates/page-syslog.html
@@ -10,37 +10,43 @@
 		<label for="filterstring">{{lang_filter}}</label>
 	</div>
 	<div class="clearfix"></div>
-	<div class="input-group">
-		<input id="filterstring" placeholder="id" value="{{filter}}" name="filter">
-		<span class="input-group-btn">
-				<button class="btn btn-default" type="submit">{{lang_go}}</button>
-			</span>
-	</div>
-	<div class="pull-left">
-		<div class="checkbox">
-			<input id="notbox" type="checkbox" name="not" {{#not}}checked="checked"{{/not}}>
-			<label for="notbox">{{lang_not}}</label>
+
+
+	<div class="row">
+		<div class="col-sm-1">
+			<div class="checkbox">
+				<input id="notbox" type="checkbox" name="not" {{#not}}checked="checked"{{/not}}>
+				<label for="notbox">{{lang_not}}</label>
+			</div>
+		</div>
+		<div class="col-sm-10">
+			<input id="filterstring" placeholder="id" value="{{filter}}" name="filter">
+		</div>
+		<div class="col-sm-1">
+			<button class="btn btn-primary" style="display: inline-block;" type="submit">{{lang_go}}</button>
 		</div>
 	</div>
 </form>
 {{{pagenav}}}
+
+
 <table class="table table-striped table-condensed">
 	<thead>
 	<th width="1"></th>
-	<th>{{lang_when}}</th>
-	<th>{{lang_client}}</th>
-	<th>{{lang_event}}</th>
+	<th class="text-center">{{lang_when}}</th>
+	<th class="text-center">{{lang_client}}</th>
+	<th class="text-center">{{lang_event}}</th>
 	<th width="1">{{lang_details}}</th>
 	</thead>
 	<tbody>
 	{{#list}}
 		<tr>
 			<td><span class="type-button glyphicon {{icon}}" title="{{logtypeid}}"></span></td>
-			<td class="text-right" nowrap="nowrap">{{date}}</td>
-			<td>{{clientip}}</td>
+			<td class="text-center" nowrap="nowrap">{{date}}</td>
+			<td class="text-left">{{clientip}}</td>
 			<td>{{description}}</td>
-			<td>{{#extra}}
-				<a class="btn btn-default btn-xs pull-left" onclick="$('#details-body').html($('#extra-{{logid}}').html())"
+			<td class="text-center">{{#extra}}
+				<a class="btn btn-default btn-xs" onclick="$('#details-body').html($('#extra-{{logid}}').html())"
 					data-toggle="modal" data-target="#myModal">&raquo;</a>
 				<div class="hidden" id="extra-{{logid}}">{{extra}}</div>
 			{{/extra}}</td>
@@ -48,6 +54,7 @@
 	{{/list}}
 	</tbody>
 </table>
+
 {{{pagenav}}}
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -60,9 +67,6 @@
 			</div>
 			<div class="modal-body">
 				<pre id="details-body"></pre>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 			</div>
 		</div>
 	</div>
