--- a/modules-available/news/templates/page-news.html
+++ b/modules-available/news/templates/page-news.html
@@ -1,5 +1,5 @@
-
 <h1>{{lang_vmChooser_title}}</h1>
+
 <ul class="nav nav-tabs" role="tablist">
 	<li role="presentation" class="{{^editHelp}}active{{/editHelp}}"><a href="#news" role="tab" data-toggle="tab">{{lang_editNews}}</a></li>
 	<li role="presentation" class="{{#editHelp}}active{{/editHelp}}"	  ><a href="#help" role="tab" data-toggle="tab">{{lang_editHelp}}</a></li>
@@ -42,7 +42,8 @@
 									<th data-sort="int">{{lang_date}}</th>
 									<th data-sort="string">{{lang_title}}</th>
 									<th data-sort="string">{{lang_content}}</th>
-									<th></th>
+									<th class="text-center">{{lang_show}}</th>
+									<th class="text-center">{{lang_delete}}</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -51,9 +52,12 @@
 									<td class="text-left text-nowrap" data-sort-value={{dateline}}>{{date}}</td>
 									<td><table class="slx-ellipsis"><tr><td>{{title}}</td></tr></table></td>
 									<td><table class="slx-ellipsis"><tr><td>{{content}}</td></tr></table></td>
-									<td class="text-nowrap">
-										<a class="btn btn-primary btn-xs" href="?do=news&amp;newsid={{newsid}}&amp;action=show"><span class="glyphicon glyphicon-share-alt"></span> {{lang_show}}</a>
-										<button class="btn btn-danger btn-xs" type="submit" name="newsid" value="{{newsid}}"><span class="glyphicon glyphicon-remove"></span> {{lang_delete}}</button>
+									<td class="text-center">
+										<a class="btn btn-primary btn-xs" href="?do=news&amp;newsid={{newsid}}&amp;action=show"><span class="glyphicon glyphicon-share-alt"></span></a>
+									</td>
+									<td class="text-center">
+										<input type="hidden" name="news-type" value="news">
+										<button class="btn btn-danger btn-xs" type="submit" name="newsid" value="{{newsid}}"><span class="glyphicon glyphicon-trash"></span></button>
 									</td>
 								</tr>
 								{{/list}}
@@ -90,7 +94,8 @@
 								<tr>
 									<th data-sort="int">{{lang_date}}</th>
 									<th data-sort="string">{{lang_content}}</th>
-									<th></th>
+									<th class="text-center">{{lang_show}}</th>
+									<th class="text-center">{{lang_delete}}</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -98,9 +103,12 @@
 								<tr {{#active}}class="active"{{/active}}>
 									<td class="text-left text-nowrap" data-sort-value={{dateline}}>{{date}}</td>
 									<td><table class="slx-ellipsis"><tr><td>{{content}}</td></tr></table></td>
-									<td class="text-nowrap">
-										<a class="btn btn-primary btn-xs" href="?do=news&amp;newsid={{newsid}}&amp;action=show"><span class="glyphicon glyphicon-share-alt"></span> {{lang_show}}</a>
-										<button class="btn btn-danger btn-xs" type="submit" name="newsid" value="{{newsid}}"><span class="glyphicon glyphicon-remove"></span> {{lang_delete}}</button>
+									<td class="text-center">
+										<a class="btn btn-primary btn-xs" href="?do=news&amp;newsid={{newsid}}&amp;action=show"><span class="glyphicon glyphicon-share-alt"></span></a>
+									</td>
+									<td class="text-center">
+										<input type="hidden" name="news-type" value="help">
+										<button class="btn btn-danger btn-xs" type="submit" name="newsid" value="{{newsid}}"><span class="glyphicon glyphicon-trash"></span></button>
 									</td>
 								</tr>
 								{{/listHelp}}
