[internetaccess] implemented new permission system

--- a/modules-available/internetaccess/templates/_page.html
+++ b/modules-available/internetaccess/templates/_page.html
@@ -1,6 +1,6 @@
 <h1>{{lang_internetAccess}}</h1>
 
-<form action="?do=InternetAccess" method="post">
+<form action="?do=InternetAccess&amp;action=save" method="post">
 	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="position:absolute;top:-2000px" tabindex="-1">
 	<input type="password" name="password_fake" id="password_fake" value="" style="position:absolute;top:-2000px" tabindex="-1">
 	<input type="hidden" name="token" value="{{token}}">
